--- a/saasCommon.css
+++ b/saasCommon.css
@@ -43,7 +43,7 @@ body {
 }
 
 .sticky {
-    position: fixed;
+    position:fixed;
     top: 0;
     background-color: white;
   }
@@ -55,8 +55,6 @@ body {
     width: 100%;
     height:7rem;
     z-index: 10;
-    position: sticky;
-    top: 5;
 }
 
 .projectLogoContainer {
@@ -226,7 +224,6 @@ body {
 .fourth-section {
     display: flex;
     padding-top: 2rem;
-    height: 25rem;
     align-items: center;
     width: 100%;
     justify-content:center;
@@ -280,4 +277,53 @@ body {
     color: var(--blueText);
     font-size: large;
     font-weight: 700;
+}
+.sketch-button {
+    height: 1.7rem;
+    width: 4.2rem;
+    margin-left: .5rem;
+    background-color: rgb(80, 207, 165);
+    font-weight: 500;
+}
+
+/* ///////////////////////////////////////// */
+
+.fifth-section {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0rem 0rem 0rem 2rem;
+    align-content: center;
+    justify-content:center;
+    width: 100%;
+    margin-top: 2rem;
+}
+
+.fifth-section-flex {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    background-color: rgb(246, 248, 248);
+    margin-right: 2rem;
+    padding: 6rem 0rem 0rem 2rem;
+
+}
+.fifth-section-left {
+    width: 31.5rem;
+    padding-top: 2rem;
+
+}
+
+.fifth-section-right {
+    width: 31.5rem;
+    padding-top: 2rem;
+}
+
+.banner-one-container {
+    width: 31.5rem;
+    height: 22.063;
+}
+
+.banner-one-container img {
+    width: 100%;
+    height: 100%;
 }
