--- a/saasCommon.css
+++ b/saasCommon.css
@@ -327,3 +327,22 @@ body {
     width: 100%;
     height: 100%;
 }
+
+/* ///////////////////////////////////////////// */
+.sixth-section {
+    margin-bottom: 5rem;
+    margin-top: 3rem;
+    text-align: center;
+    
+}
+.sixth-section h1 {
+    font-weight: 700;
+}
+
+.sixth-section p {
+    font-weight: 500;
+    color: var(--midTextColor);
+    margin-bottom: 2rem;
+}
+
+/* /////////////////////////////////////// */
