--- a/saasCommon.css
+++ b/saasCommon.css
@@ -13,9 +13,9 @@ button {
     border-radius: 2rem;
     color: white;
     background-color: var(--blueButton);
-    border-style: none;
-   
+    border-style: none;  
 }
+
 
 :root {
     --midTextColor: rgb(122, 121, 121);
@@ -32,6 +32,23 @@ body {
     height: 100vh;
     
 }
+
+.section-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    padding: 2rem;
+}
+
+.sub-section-container {
+    display: flex;
+    flex-wrap: wrap;
+    width:70%;
+    justify-content: space-between;
+}
+
+
 /* ////////////////////////////////////// */
 .first-second-section {
     background-image: url("saas-project-assets/project_logo/topSection.svg");
@@ -46,18 +63,20 @@ body {
     position:fixed;
     top: 0;
     background-color: white;
+    align-self:baseline;
   }
   
 .header-nav {
     display: flex;
     justify-content: space-between;
-    padding: 2rem 3rem 2rem 2rem;
+    padding: 0rem 1rem 0rem 0rem;
     width: 100%;
     height:7rem;
     z-index: 10;
 }
 
 .projectLogoContainer {
+    padding: .5rem;
     height: 4rem;
     width: 10rem;
 }
@@ -81,6 +100,7 @@ body {
     margin-left: 2.5rem;
     font-size: medium;
     font-weight: 500;
+    margin: 1rem;
 }
 /* \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
 
@@ -140,6 +160,13 @@ body {
     place-items: start center ;
 }
 
+.brandGrid :hover {
+        -webkit-transform: scale(1.04);
+        -moz-transform:    scale(1.04);
+        -o-transform:      scale(1.04);
+        -ms-transform:     scale(1.04);
+    }
+
 .img-container {
     height: 5.5rem;
     width: 5.5rem;
@@ -149,6 +176,7 @@ body {
     padding-top: .5rem;
     background-color: white;   
 }
+
 
 .brandGrid img { 
     width: 70%;
@@ -232,19 +260,28 @@ body {
 }
 
 .fourth-section-flex {
-    justify-content:center;
+    justify-content:space-around;
     display: flex;
     flex-wrap: wrap;
     padding: 1rem 1rem;
+    width: 100%;
 }
 
 .fourth-section-card {
+    margin-top: 1rem;
     padding: 1rem 1rem;
     display: flex;
     flex-direction: column;
     width: 13.625rem;
     height: 19.375rem;
     box-shadow: 0rem 0rem 1rem .25rem rgb(190, 188, 188);
+}
+
+.fourth-section-flex :hover{
+    -webkit-transform: scale(1.04);
+    -moz-transform:    scale(1.04);
+    -o-transform:      scale(1.04);
+    -ms-transform:     scale(1.04);
 }
 
 .fourth-section-image-container {
@@ -296,32 +333,40 @@ body {
     justify-content:center;
     width: 100%;
     margin-top: 2rem;
+    margin-left: 0rem;
+    margin-right: 2rem;
+
 }
 
 .fifth-section-flex {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    background-color: rgb(246, 248, 248);
+    background-color: rgb(244, 244, 252);
     margin-right: 2rem;
     padding: 4rem 0rem 0rem 0rem;
+    width: 95%;
+    justify-content: space-between;
 
 }
+/* /////// */
 .fifth-section-left {
-    width: 25rem;
-    margin: 2rem;
-    /* padding: 2rem 4rem 0rem 0rem; */
-
+    width: 40%;
+    margin: 2rem 3rem 2rem 2rem;
 }
+
+/* /////// */
 
 .fifth-section-right {
-    width: 30rem;
+    display: flex;
+    justify-content: end;
+    width: 50%;
     padding-top: 2rem;
+
 }
 
 .banner-one-container {
-    width: 30rem;
-    height: 22;
+    max-width: 31.5rem;
+    max-height: 22.0625rem;
 }
 
 .banner-one-container img {
@@ -335,6 +380,9 @@ body {
     margin-bottom: 5rem;
     margin-top: 3rem;
     justify-content: center;
+    align-items: center;
+    width: 100%;
+    flex-wrap: wrap;
 }
 
 .sixth-section-container {
@@ -362,7 +410,7 @@ hr {
     padding-left: 2rem;
     display: flex;
     justify-content: center;
-    
+    width: 100%;
 }
 
 .seventh-section-container {
@@ -400,7 +448,6 @@ hr {
 /* /////////////////////////////////////// */
 
 
-
 .eight-section {
     display: flex;
     justify-content: center;
@@ -409,10 +456,100 @@ hr {
 }
 
 .eigth-section-image-container {
+    display: flex;
     width: 60.25rem;
     height: 25.875rem;
+    background-image: url("saas-project-assets/banners/banner_two.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    justify-content: center;
+    align-items: center;
 }
 
-.eigth-section-image-container img {
+.play-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 4.375rem;
+    height: 4.375rem;
+    background-color: white;
+    border-radius: 45rem;
+    box-shadow: 0rem 0rem 1rem .25rem rgb(190, 188, 188);
+}
+
+/* /////////////////////////////////////// */
+
+.ninth-section {
+    display: flex;
     width: 100%;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 5rem;
+}
+
+.ninth-section-flex {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+    padding: 2rem;
+
+}
+
+.ninth-left {
+    background-image: url("saas-project-assets/abstract/dots.svg");
+    background-repeat: no-repeat;
+    padding-left: 4rem;
+    padding-bottom: 3.5rem;
+    padding-right: 4rem;
+}
+
+.ninth-left-image-container {
+    width: 23.188rem;
+    height: 26.563rem;
+}
+
+.ninth-left-image-container img{
+    width: 100%;
+}
+
+.ninth-right {
+    display: flex;
+    flex-direction: column;
+    width: 30.125rem;
+    justify-content: center;
+}
+
+.ninth-right-image-container {
+    width: 6.25rem;
+    height: 1.472rem;
+    margin-top: 1.75rem;
+    margin-bottom: 1rem;
+}
+
+.ninth-right-image-container img{
+    width: 100%;
+    
+}
+
+.ninth-right p{
+    width: 30.125rem;
+    font-weight: 400;
+    font-size: 1.5rem;
+    margin-bottom: 4rem;
+}
+
+.ninth-right :nth-child(3){
+    width: 30.125rem;
+    font-size: 1rem;
+    line-height: 0rem;
+    margin-bottom: .4rem;
+}
+
+.ninth-right :nth-child(4){
+    width: 30.125rem;
+    font-size: .79rem;
+    font-weight: 600;
+    color: var(--midTextColor);
+    line-height: 0rem;
 }
