--- a/saasCommon.css
+++ b/saasCommon.css
@@ -332,7 +332,7 @@ body {
     flex-wrap: wrap;
     padding: 0rem 0rem 0rem 2rem;
     align-content: center;
-    justify-content:center;
+    justify-content: center;
     width: 100%;
     margin-top: 2rem;
     margin-left: 0rem;
@@ -346,14 +346,15 @@ body {
     background-color: rgb(244, 244, 252);
     margin-right: 2rem;
     padding: 4rem 0rem 0rem 0rem;
-    width: 95%;
+    width: 100%;
     justify-content: space-between;
 
 }
 /* /////// */
 .fifth-section-left {
-    width: 40%;
+    width: 23rem;
     margin: 2rem 3rem 2rem 2rem;
+    background-color: antiquewhite;
 }
 
 /* /////// */
@@ -361,9 +362,9 @@ body {
 .fifth-section-right {
     display: flex;
     justify-content: end;
-    width: 50%;
+    min-width: 32rem; 
     padding-top: 2rem;
-
+    background-color: aqua;
 }
 
 .banner-one-container {
@@ -373,7 +374,7 @@ body {
 
 .banner-one-container img {
     width: 100%;
-    height: 100%;
+    
 }
 
 /* ///////////////////////////////////////////// */
@@ -510,7 +511,7 @@ body {
 .ninth-left {
     background-image: url("saas-project-assets/abstract/dots.svg");
     background-repeat: no-repeat;
-    padding-left: 4rem;
+    padding-left: 2rem;
     padding-bottom: 3.5rem;
     padding-right: 4rem;
 }
@@ -584,7 +585,6 @@ body {
 
 .eleventh-section{
     display: flex;
-    justify-content: center;
     width: 100%;
     margin: 1rem 0rem 2rem 0rem;
 }
@@ -593,6 +593,7 @@ body {
     display: flex;
     justify-content: space-around;
     width: 100%;
+    flex-wrap: wrap;
 
 }
 
@@ -734,7 +735,7 @@ body {
 
 .fourteenth-section{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 100%;
     flex-wrap: wrap;
     background-color: #20335b;
@@ -903,3 +904,73 @@ body {
                             text-decoration:dotted;
                             text-decoration-line: underline;
                         }
+
+        /* /////////////////////////////////////// */
+
+.fifteenth-section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.fifteenth-section i {
+    margin-right: 1rem;
+}
+
+.fifteenth-section h2 {
+    font-size: 1.125rem;
+    font-weight: 860;
+}
+
+.fifteenth-section p,
+.fifteenth-section a{
+    font-size: .875rem;
+    color: var(--midTextColor);
+    font-weight: 510;
+}
+
+
+        .fifteenth-flex {
+            display: flex;
+            width: 100%;
+            justify-content: space-around;
+
+        }
+
+                .fifteenth-flex-card{
+                    /* display: grid; */
+                    padding: 1rem
+                }
+
+                        .contact-logo {
+                            height: 5rem;
+                            width:6rem;
+                            padding: 0rem;
+                            margin: 1rem 1rem -2rem 1rem;
+                        }
+
+                        .contact-logo img {width: 100%;}
+
+                        .address,
+                        .phone,
+                        .help,
+                        .yAccount,
+                        .hiring
+                        {
+                            display: flex;
+                            align-items: center;
+                            font-size: 0px;
+                            margin: -1rem 0rem -1rem 0rem ;
+
+                        }
+                        
+                        .hiring button{
+                            margin-left: .25rem;
+                            height:1.2rem;
+                            width: 5.5rem;
+                            border-radius: .25rem;
+                            align-self: baseline;
+                        }
+
+                     
+                       
