--- a/saasCommon.css
+++ b/saasCommon.css
@@ -70,6 +70,11 @@ button {
     border-style: none;  
 }   
 
+
+li {
+    list-style: none;
+}
+
 .playButton {
     width:9rem;
     font-size: medium;
@@ -136,11 +141,45 @@ img {
     width: 10rem;
 }    
 
+.right-head-nav {
+    display: flex;
+    align-items: center;
+}
 
+.right-head-nav2 {
+    display: none;
+}
+.hamburger {
+    height: 3rem;
+    width: var(--50px);
+    border-radius: 0;
+    background-color:transparent;
+    padding: .5rem;
+    margin: 0rem;
+    color: var(--midTextColor);
+}
+
+.hamburger div {
+    align-self: center;
+    justify-self: center;
+    height: .1rem;
+    width: 1rem;
+    border-style: solid;
+    border-width: .1rem;
+    background-color: var(--midTextColor);
+    border-style: solid;
+    margin: .2rem .55rem;
+    }
+
+
+
+.menu-list {
+    display: flex;
+    align-items: center;
+}
 .right-head-nav a {
     padding: .5rem;
 }    
-
 
 .right-head-nav button {
     margin-left: 2.5rem;
@@ -1016,3 +1055,100 @@ img {
             padding: 0rem 4rem;
             margin-bottom: 2rem;
         }
+
+        /* /////////////////////////////////////// */
+
+
+        /* /////////////////////////////////////// */
+
+[aria-controls="menu-list"] {
+    display: none;
+}        
+
+/* /////////////////////////////////////// */
+
+
+@media (min-width: 768px) and (max-width: 1024px){
+   
+    .right-head-nav {
+        display: none;
+    }
+
+    .right-head-nav2 {
+        display: flex;
+        flex-direction: column;
+        background-color: transparent;
+        height:fit-content;
+        width: 100%;
+    }
+    
+    .hamburger {
+        align-self: flex-end;
+        margin-top: -7rem;
+        z-index: 11;
+    }
+
+    .menu-list {
+        max-height: 0rem;
+        overflow: hidden;
+        transform: rotateX(90deg);
+        transition: all 0.5s;
+        background-color: white;
+    }
+    
+    #menu1 {
+        grid-area:menu1;
+    }
+
+    #menu2 {
+        grid-area:menu2;
+    }
+
+    #menu3 {
+        grid-area:menu3;
+    }
+
+    #menu4 {
+        grid-area:menu4;
+    }
+
+    #menu5 {
+        grid-area:menu5;
+    }
+
+    #menu6 {
+        grid-area:menu6;
+        justify-self: center;
+        align-self: ;
+
+    }
+
+    [aria-controls="menu-list"] {
+        display: inline-block;
+    }        
+
+
+    [aria-expanded="true"] ~ ul {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: 4rem 4fr;
+        grid-template-areas: 
+        "menu1 menu2 menu3 menu4 menu5"
+        "menu6 menu6 menu6 menu6 menu6";
+        align-items: baseline;
+        justify-content: space-between;
+        width: 100%;
+        min-height:40rem;
+        transform: rotateX(0deg);
+        z-index: 11;
+        box-shadow: 0rem -.10rem .5rem .25rem rgb(190, 188, 188);
+        padding: 1rem 1rem 0rem 5rem;
+    }
+
+    [aria-expanded="true"] ~ button {
+        grid-row:2/2;
+        grid-column: 1/5;
+        z-index: 11;
+    }
+
+}
